syntax = "proto3";
package pattern;

option csharp_namespace = "SM.Service";

message LiveProcessingStarted {
}
